k8s/app/squirrel-admin/svc-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: squirrel-admin
  namespace: game
spec:
  type: ClusterIP
  selector:
    app: squirrel-admin
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
